# TTNS

./: .clang-format  .editorconfig  .envrc  .pre-commit-config.yaml  CMakeLists.txt  environment.yml  renovate.json
include/TTNS/: BFIterator.hpp  BFSIterator.hpp  DFIterator.hpp  Tree.hpp
src/: main.cpp
tests/: test_tree.cpp
tools/: update-vscode-config.py
